--- a/custom.css
+++ b/custom.css
@@ -1,38 +1,35 @@
-html {
+body {
   background-color: black;
 }
 
 #quote {
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    width:50em;
-    height:24em;
-    margin-top: -12em; /*set to a negative number 1/2 of your height*/
-    margin-left: -25em; /*set to a negative number 1/2 of your width*/
-    border: 5px solid white;
+  margin-right: auto;
+  height: 70vh;
+  background-color: black;
+  margin-top: 10vh;
+  margin-bottom: -5vh;
+  border: 1vh solid white;
 }
+
 button {
-  position: absolute;
+  position: relative;
+  display:block;
+  margin:0 auto;
   font-weight: 700;
-  top: 50%;
-  left: 50%;
-  width:10em;
-  height:5em;
-  margin-top: 9.5em;
-  margin-left: -5em;
+  height: 10vh;
+  width: 100px;
   background-color: white;
+  color: black;
   border: none;
+  text-align: center;
 
 }
 
 #quote p {
   color: #fff;
-  font-size: 30px;
-  padding-top: 10%;
+  padding-top: 8vh;
+  font-size: 300%;
 }
 
 #quote p > i {
-  font-weight: 300;
-  font-size: 25px;
 }
